--- a/frontend/mine_portfolio_reactJs/package.json
+++ b/frontend/mine_portfolio_reactJs/package.json
@@ -41,5 +41,6 @@
   "devDependencies": {
     "gh-pages": "^6.1.1"
   },
-  "homepage": "https://github.com/DEVENSHRAJ/Personal_Portfolio/tree/main/frontend/mine_portfolio_reactJs"
+  // "homepage": "https://{username}.github.io/{repo-name}"
+  "homepage": "https://DEVENSHRAJ.github.io/Personal_Portfolio/tree/main/frontend/mine_portfolio_reactJs"
 }
